--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "require": {
         "php": "^7.1.3",
         "laravel/framework": "~5.8",
-        "doctrine/dbal": "^2.9",
-        "technote/laravel-search-helper": "^0.0.3"
+        "doctrine/dbal": "^2.9"
     },
     "autoload": {
         "psr-4": {
@@ -43,11 +42,12 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "fzaninotto/faker": "^1.8",
         "nunomaduro/collision": "^3.0",
+        "orchestra/testbench": "^3.8",
         "php-coveralls/php-coveralls": "^2.1",
         "phpmd/phpmd": "^2.6",
         "phpunit/phpunit": "^8.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "orchestra/testbench": "^3.8"
+        "technote/laravel-search-helper": "^0.0.3"
     },
     "scripts": {
         "setup": [
