--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "laravel/framework": "~5.8",
+        "php": "^7.2",
+        "laravel/framework": "*",
         "doctrine/dbal": "^2.9"
     },
     "autoload": {
