--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^7.2",
         "laravel/framework": "*",
-        "doctrine/dbal": "^2.9"
+        "doctrine/dbal": "^2.10"
     },
     "autoload": {
         "psr-4": {
@@ -40,11 +40,11 @@
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.26.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-        "fzaninotto/faker": "^1.8",
+        "fzaninotto/faker": "^1.9",
         "nunomaduro/collision": "^3.0",
-        "orchestra/testbench": "^4.2",
-        "phpmd/phpmd": "^2.7",
-        "phpunit/phpunit": "^8.4",
+        "orchestra/testbench": "^4.5",
+        "phpmd/phpmd": "^2.8",
+        "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "^3.5",
         "technote/laravel-search-helper": "^0.1.1"
     },
@@ -67,7 +67,7 @@
             "phpcs --standard=./phpcs.xml"
         ],
         "phpmd": [
-            "phpmd ./src/,./tests/ text phpmd.xml"
+            "phpmd ./src/,./tests/ ansi phpmd.xml"
         ],
         "phpunit": [
             "phpunit --stop-on-failure --colors=always"
