--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -1,12 +1,20 @@
 on:
   schedule:
-    - cron: 0 17 * * 5
+    - cron: 0 3 * * 6
   pull_request:
     types: [opened, synchronize, reopened, closed]
+  repository_dispatch:
+    types: [update-deps]
 
 name: Update dependencies
+
+env:
+  CI: 1
+  GITHUB_ACTION: 1
+  TRAVIS_BUILD_DIR: ${{ github.workspace }}
+
 jobs:
-  release:
+  update:
     name: Update dependencies
     runs-on: ubuntu-latest
     steps:
@@ -15,6 +23,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           EXECUTE_COMMANDS: |
+            composer prepare
             composer packages
           COMMIT_MESSAGE: 'chore: update dependencies'
           PR_BRANCH_NAME: 'chore-update-${PR_ID}'
