--- a/.github/workflows/sync-workflows.yml
+++ b/.github/workflows/sync-workflows.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: 0 15 * * 4
+    - cron: 0 11 * * 4
   repository_dispatch:
     types: [sync-workflows]
 
@@ -20,7 +20,7 @@ jobs:
             mkdir -p .github/workflows/.tmp
             git clone --depth=1 https://github.com/technote-space/github-actions-workflows.git .github/workflows/.tmp/workflows
 
-            bash .github/workflows/.tmp/workflows/composer/copy.sh test
+            bash .github/workflows/.tmp/workflows/composer/copy.sh
 
             rm -rdf .github/workflows/.tmp
           COMMIT_MESSAGE: 'chore: sync workflows'
