--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^5.0",
-        "technote/laravel-search-helper": "^0.1.4 || ^0.2.0"
+        "orchestra/testbench": "^5.1",
+        "technote/laravel-search-helper": "^0.2.0"
     },
     "scripts": {
         "setup": [
