--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           EXCLUDE_MERGED: 'true'
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::1"
+        run: echo "RUNNING=1" >> $GITHUB_ENV
       - uses: actions/checkout@v2
       - uses: technote-space/get-git-comment-action@v1
       - uses: technote-space/get-diff-action@v3
@@ -26,7 +26,7 @@ jobs:
           SUFFIX_FILTER: .php
         if: "! contains(env.COMMIT_MESSAGE, '[skip ci]') && ! contains(env.COMMIT_MESSAGE, '[ci skip]')"
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::"
+        run: echo "RUNNING=" >> $GITHUB_ENV
         if: "! env.GIT_DIFF"
 
       - name: Get Composer Cache Directory
@@ -57,7 +57,7 @@ jobs:
       LINT: 1
     steps:
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::1"
+        run: echo "RUNNING=1" >> $GITHUB_ENV
       - uses: actions/checkout@v2
       - uses: technote-space/get-git-comment-action@v1
       - uses: technote-space/get-diff-action@v3
@@ -66,7 +66,7 @@ jobs:
           SEPARATOR: ','
         if: "! contains(env.COMMIT_MESSAGE, '[skip ci]') && ! contains(env.COMMIT_MESSAGE, '[ci skip]')"
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::"
+        run: echo "RUNNING=" >> $GITHUB_ENV
         if: "! env.GIT_DIFF"
 
       - name: Get Composer Cache Directory
@@ -102,7 +102,7 @@ jobs:
             SEND_CODECOV: 1
     steps:
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::1"
+        run: echo "RUNNING=1" >> $GITHUB_ENV
       - uses: actions/checkout@v2
       - uses: technote-space/get-git-comment-action@v1
       - uses: technote-space/get-diff-action@v3
@@ -115,18 +115,18 @@ jobs:
           FILES: composer.lock
         if: "! contains(env.COMMIT_MESSAGE, '[skip ci]') && ! contains(env.COMMIT_MESSAGE, '[ci skip]')"
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::"
+        run: echo "RUNNING=" >> $GITHUB_ENV
         if: "! env.GIT_DIFF"
       - name: Set running flag
         if: "matrix.SEND_CODECOV == 1 && ! startsWith(github.ref, 'refs/tags/') && github.event.base_ref == format('refs/heads/{0}', github.event.repository.default_branch)"
-        run: echo "::set-env name=RUNNING::1"
+        run: echo "RUNNING=1" >> $GITHUB_ENV
       - name: Set running flag
         if: matrix.SEND_CODECOV == 1 && startsWith(github.ref, 'refs/tags/')
-        run: echo "::set-env name=RUNNING::1"
+        run: echo "RUNNING=1" >> $GITHUB_ENV
       - name: Set running flag
         run: |
           if [[ ! -f composer.json ]] || ! < composer.json jq -r '.scripts | keys[]' | grep -qe '^phpunit$'; then
-            echo "::set-env name=RUNNING::"
+            echo "RUNNING=" >> $GITHUB_ENV
           fi
 
       - name: Switch PHP version
@@ -174,14 +174,14 @@ jobs:
       GH_PAGES_DIR: public/gh-pages
     steps:
       - name: Set running flag
-        run: echo "::set-env name=RUNNING::1"
+        run: echo "RUNNING=1" >> $GITHUB_ENV
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
       - name: Set running flag
         run: |
           if [[ ! -f composer.json ]] || ! < composer.json jq -r '.scripts | keys[]' | grep -qe '^bin:gh-pages$'; then
-            echo "::set-env name=RUNNING::"
+            echo "RUNNING=" >> $GITHUB_ENV
           fi
 
       - name: Get Yarn Cache Directory
@@ -217,7 +217,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Get version
-        run: echo "::set-env name=TAG_NAME::${HEAD_REF#refs/tags/}"
+        run: echo "TAG_NAME=${HEAD_REF#refs/tags/}" >> $GITHUB_ENV
         env:
           HEAD_REF: ${{ github.ref }}
       - name: Create Release
