--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           echo "::set-output name=dir::$(composer config cache-files-dir)"
         if: env.RUNNING
       - name: Cache composer modules
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -75,7 +75,7 @@ jobs:
           echo "::set-output name=dir::$(composer config cache-files-dir)"
         if: env.RUNNING
       - name: Cache composer modules
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -129,6 +129,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
+          tools: composer:v1
           coverage: xdebug
         if: env.RUNNING
       - name: Get Composer Cache Directory
@@ -137,7 +138,7 @@ jobs:
           echo "::set-output name=dir::$(composer config cache-files-dir)"
         if: env.RUNNING
       - name: Cache composer modules
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -185,7 +186,7 @@ jobs:
         run: echo "::set-output name=dir::$(yarn cache dir)"
         if: env.RUNNING
       - name: Cache node dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
@@ -224,12 +225,11 @@ jobs:
           DRAFT: false
           NAME: ${{ env.TAG_NAME }}
           TAG: ${{ env.TAG_NAME }}
-      - uses: 8398a7/action-slack@v2
+      - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           text: ${{ format('<{0}>', steps.drafter.outputs.html_url) }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: success() && env.SLACK_WEBHOOK_URL
 
@@ -241,10 +241,9 @@ jobs:
     if: always()
     steps:
       - uses: technote-space/workflow-conclusion-action@v1
-      - uses: 8398a7/action-slack@v2
+      - uses: 8398a7/action-slack@v3
         with:
           status: failure
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: env.WORKFLOW_CONCLUSION == 'failure' && env.SLACK_WEBHOOK_URL
